--- a/lab 2/The future/style.css
+++ b/lab 2/The future/style.css
@@ -25,3 +25,19 @@ gap: 10px;
         grid-template-columns: repeat(2, 2fr);
     }
 }
+@media(min-width:1100px){
+    .grid{
+        grid-template-columns: repeat(5, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+    }
+
+    .blueBox{
+        grid-column: 3 / span 1;
+        grid-row: 1 / span 3;
+    }
+
+    .yellowBox{
+        grid-column: 4 / span 2;
+        grid-row: 2/ span 2;
+    }
+}
